fixed z-index issue

--- a/src/scss/partial/content.scss
+++ b/src/scss/partial/content.scss
@@ -151,6 +151,7 @@ img {
     position: absolute;
         top: 30px;
         right: 20px;
+    z-index: 20;
 
     &:target {
         display: flex;
@@ -202,6 +203,7 @@ img {
       top: 20vh;
       left: 25vw;
       width: 50vw;
+    z-index: 20;
 
     &:target {
       display: block;
